--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #contents{
   margin: auto;
-  width:1200px;
+  width:95%;
   background-color:rgba(255,255,255,0.75);
   padding: 30px;
 
@@ -14,7 +14,7 @@ body{
 
 header{
   margin: auto;
-  width:1200px;
+  width:95%;
   background-color:rgba(255,255,255,0.75);
   color:red;
   padding: 30px;
